// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component become checkmark when process complete 1`] = `
<div
  class="complete"
  style="width: 66px; height: 66px;"
>
  <svg
    class="icon"
    name="checkmark"
    viewBox="0 0 66 66"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="none"
      height="66"
      width="66"
    />
     
    <polyline
      fill="none"
      points="4 41 25 58 62 17"
      stroke="#009688"
      stroke-linecap="square"
      stroke-miterlimit="10"
      stroke-width="7.333333333333333"
    />
  </svg>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Component become cross when process error 1`] = `
<div
  class="error-icon"
  style="width: 66px; height: 66px;"
>
  <!---->
   
  <svg
    class="icon"
    name="error"
    viewBox="0 0 66 66"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="#f44336"
      stroke="none"
      transform="scale(0.00515625, 0.00515625)"
    >
      <path
        d="M1545 12784 c-85 -19 -167 -51 -243 -95 -69 -41 -1089 -1049 -1157
              -1144 -101 -141 -140 -263 -140 -440 0 -169 36 -293 125 -427 29 -43 705 -726
              2149 -2170 l2106 -2108 -2111 -2112 c-1356 -1358 -2124 -2133 -2147 -2169 -88
              -137 -121 -249 -121 -419 -1 -181 37 -302 139 -445 68 -95 1088 -1103 1157
              -1144 273 -159 604 -143 853 42 22 17 986 976 2143 2131 l2102 2101 2103
              -2101 c1156 -1155 2120 -2114 2142 -2131 69 -51 130 -82 224 -113 208 -70 431
              -44 629 71 69 41 1089 1049 1157 1144 101 141 140 263 140 440 0 166 -36 290
              -121 422 -25 39 -746 767 -2148 2171 l-2111 2112 2107 2108 c2207 2208 2162
              2161 2219 2303 75 187 77 392 4 572 -53 132 -74 157 -615 700 -289 291 -552
              548 -585 572 -141 101 -263 140 -440 140 -166 0 -289 -35 -420 -120 -41 -26
              -724 -702 -2172 -2149 l-2113 -2111 -2112 2111 c-1454 1452 -2132 2123 -2173
              2150 -64 41 -149 78 -230 101 -79 22 -258 26 -340 7z"
      />
    </g>
  </svg>
   
  <!---->
</div>
`;

exports[`Component is a Vue instance 1`] = `
<div
  class="spinner"
  style="width: 66px; height: 66px;"
>
  <!---->
   
  <!---->
   
  <svg
    class="icon"
    name="loading"
    viewBox="0 0 66 66"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="length"
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="#009688"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
</div>
`;
